Better fix for --enable-preview errors. Suggested by Alan Bateman